<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShippingAddressActivity" 
   >
   
    <TextView
        android:id="@+id/txt_shipping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shipping_address"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/edit_addr_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/address_line_1"
        />
    
    <EditText
        android:id="@+id/edit_addr_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/address_line_2"/>
    
    <EditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/city"/>
    
    <EditText
        android:id="@+id/edit_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/state"/>
    
    <EditText
        android:id="@+id/edit_zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:hint="@string/zip_code"/>
    
    <EditText
        android:id="@+id/edit_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/country"/>
    
    <Button
        android:id="@+id/btn_proceed_to_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/proceed_to_payment"
        />

</LinearLayout>
